--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-native-worklets": "^0.6.1",
+    "react-native-worklets-core": "^1.6.2",
     "tailwindcss": "^3.4.17",
     "zod": "^4.1.3",
     "zustand": "^5.0.7"
