--- a/app.json
+++ b/app.json
@@ -1,16 +1,22 @@
 {
   "expo": {
-    "name": "stronguru-mobile-final",
+    "name": "Stronguru",
     "slug": "stronguru-mobile-final",
     "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "strongurumobilefinal",
+    "scheme": "stronguru",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/images/splash-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#10b981"
+    },
     "ios": {
       "supportsTablet": true,
       "buildNumber": "2",
+      "bundleIdentifier": "stronguru-test",
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "Stronguru usa la posizione per trovare personal trainer e nutrizionisti nella tua zona.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "Stronguru usa la posizione per trovare personal trainer e nutrizionisti nella tua zona."
@@ -21,15 +27,10 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "package": "com.stronguru.mobile",
       "edgeToEdgeEnabled": true,
       "versionCode": 2,
-      "permissions": [
-        "ACCESS_COARSE_LOCATION",
-        "ACCESS_FINE_LOCATION",
-        "RECEIVE_BOOT_COMPLETED",
-        "VIBRATE",
-        "WAKE_LOCK"
-      ]
+      "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION", "RECEIVE_BOOT_COMPLETED", "VIBRATE", "WAKE_LOCK"]
     },
     "web": {
       "bundler": "metro",
@@ -44,7 +45,7 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#10b981"
         }
       ],
       [
