--- a/app.json
+++ b/app.json
@@ -32,7 +32,9 @@
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION"
       ],
-      "package": "com.gaithan.strongurumobilefinal"
+      "package": "com.stronguru.mobile",
+      "googleServicesFile": "./google-services.json"
+
     },
     "web": {
       "bundler": "metro",
@@ -40,6 +42,13 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      [
+        "@jcaspar/expo-pusher-beams",
+        {
+          "androidFirebaseSenderID": "408856645021"
+        }
+      ],
+      
       [
         "expo-build-properties",
         {
