Correct spelling of app name in app.json from "Stronguru" to "StronGuru"

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Stronguru",
+    "name": "StronGuru",
     "slug": "stronguru-mobile",
     "version": "1.2.0",
     "orientation": "portrait",
