Add production entitlements for push notifications in app.json

--- a/app.json
+++ b/app.json
@@ -23,6 +23,9 @@
         "UIBackgroundModes": [
           "remote-notification"
         ]
+      },
+      "entitlements": {
+        "aps-environment": "production"
       }
     },
     "android": {
