Add Google Services file reference in app.json

--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
           "remote-notification"
         ]
       },
+      "googleServicesFile": "./GoogleService-Info.plist",
       "entitlements": {
         "aps-environment": "production"
       }
