Add Sentry integration for error tracking and performance monitoring
- Initialized Sentry in the RootLayout component to capture errors and performance metrics.
- Updated app.json to include Sentry configuration for the project.
- Added Sentry package to dependencies in package.json and package-lock.json.
- Included .env.local in .gitignore to prevent local environment variables from being tracked.

--- a/app.json
+++ b/app.json
@@ -92,7 +92,15 @@
           "locationWhenInUsePermission": "Stronguru usa la posizione per trovare personal trainer e nutrizionisti nella tua zona."
         }
       ],
-      "expo-build-properties"
+      "expo-build-properties",
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "react-native",
+          "organization": "pasquale-32"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
