--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@sentry/react-native": "^7.4.0",
     "axios": "^1.12.2",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
